Fix logo and text alignment

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -62,11 +62,15 @@ body > header {
 }
 
 #nav_logo {
-    cursor: pointer;
-    width: 133px;
-    height: 133px;
     margin: 0.25em 2.5em 0.5em 2.5em;
-    
+}
+
+nav.nav_logo h1 {
+    font-size: 32px;
+}
+
+nav.nav_logo h2 {
+    font-size: 16px;
 }
 
 .hero_image img {
